# newsSummarizer

./: .gitignore  README.md  docker-compose.yaml
archive/: Dockerfile
chat/: Dockerfile  Makefile  README.md  pyproject.toml
chat/app/: config.py  main.py
chat/app/chat_client/: chat_client.py  slack_chat.py
chat/app/message_event_router/: __init__.py  slack_router.py
chat/scripts/: start.sh
chat/src/: chat.py  db.py  mock_db.py
chat/tests/production_test/: sent_message_with_url.py  test.py
crawl/: Dockerfile  README.md  get_news.py
deploy/: Makefile  README.md  config-template.yaml  docker-compose-development.yaml  docker-compose-production.yaml
deploy/databases/scripts/: cockroach-init.sh
deploy/dev-assistant/: README.md  enter-dev-env.sh  main.py
deploy/dev-assistant/commands/: commands.py  local.py  remote.py
deploy/dev-assistant/config/: tool_config_parser.py
deploy/dev-assistant/docker/: Dockerfile  bashrc  requirements.txt  update-env-image.sh
deploy/dev-assistant/replace/: build_image.py  replace.py
deploy/dev-assistant/runner/: runner.py
derive/: Dockerfile  pyproject.toml
derive/app/: crud.py  database.py  main.py  models.py  schemas.py  settings.py
derive/k8s/: deployment.yaml  service.yaml
infra/: README.md  config.yaml  start.sh
learn/: Dockerfile  README.md  pyproject.toml
learn/app/: main.py
learn/app/api/routes/: heartbeat.py  router.py  summarize.py
learn/app/core/: config.py  event_handlers.py  preprocess.py
learn/app/data_models/: payload.py  summarize.py
learn/app/ml_models/: adaptnlp.py  bart_hf.py  bert.py  ml_model.py
learn/scripts/: lint.sh  setup-ubuntu-gpu.sh  test.sh
learn/tests/: conftest.py
learn/tests/test_api/test_routes/: test_summarize.py
scrape/: Dockerfile  README.md  pyproject.toml
scrape/app/: main.py
scrape/app/api/: extract.py  heartbeat.py  popularity.py  router.py
scrape/app/core/: config.py  extract.py
scrape/app/data_models/: extract.py
scrape/scripts/: build.sh  format.sh  lint.sh  start.sh  tests.sh
scrape/tests/: conftest.py
scrape/tests/test_api/: test_extract.py
src/chat/: .dockerignore  Dockerfile  Makefile  chat.py  config.yaml  db.py  log.py
train/: Dockerfile  Makefile
train/src/: train.py
