[tool.poetry]
name = "derive"
version = "0.1"
description = "Derive microservice"
authors = ["krao"]

# Specify project dependencies here
# can also do poetry add pendulum
[tool.poetry.dependencies]
python = ">=3.6"
fastapi = "^0.61.0"
SQLAlchemy = "^1.3.19"
cockroachdb = "^0.3.5"
pydantic = "^1.6.1"
uvicorn = "^0.11.8"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
pytest = "^5.4.1"
pytest-cov = "^2.9.0"
sqlalchemy-stubs = "^0.3"
flake8 = "^3.7.9"
black = "^19.10b0"
isort = "^4.3.21"