[tool.poetry]
name = "learn"
version = "0.0.1"
description = "ML component of project N"
authors = ["Krutarth R"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.11.8"
fastapi = "^0.61.1"
adaptnlp = "^0.2.0"
transformers = "^3.1.0"
isort = "^5.5.2"
black = "^20.8b1"
autoflake = "^1.4"
pytest-timeout = "^1.4.2"
torch = "^1.6.0"
tensorflow = "^2.3.0"
nltk = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
